# data_msd_regression

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: figure_plotting.ipynb  msd_regression_analysis.ipynb
data/: msd_results_nsim1024_npart128.csv  msd_results_nsim128_npart128.csv  msd_results_nsim16384_npart128.csv  msd_results_nsim4096_npart128.csv  msd_results_nsim512_npart128.csv  msd_results_nsim64_npart128.csv  msd_results_nsim8192_npart128.csv
msd_analysis/: __init__.py  analysis.py  core.py  plotting.py  utils.py
