[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msd_regression"
version = "0.1.0"
description = "MSD regression analysis comparing OLS, WLS, and GLS methods"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "joblib>=1.0",
    "statsmodels>=0.13",
    "tqdm>=4.60",
    "figure_formatting @ git+https://github.com/bjmorgan/figure_formatting.git",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipython",
]

[tool.setuptools]
packages = ["msd_analysis"]
