[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "msd_regression"
version = "0.2.0"
description = "MSD regression analysis comparing OLS, WLS, and GLS methods"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "joblib",
    "tqdm",
    "figure_formatting @ git+https://github.com/bjmorgan/figure_formatting.git",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipython",
]

[tool.setuptools]
packages = ["msd_analysis"]
